Got key command set up and duck enabled

--- a/bp.html
+++ b/bp.html
@@ -8,12 +8,9 @@
 </head>
 
 
-<body>
-	<canvas id="screen">
-	</canvas>
-
-	<script src="bp.js"> </script>
-</body>
+<body onkeydown="keyDown(event)"> </body>
+<canvas id="screen"></canvas>
+<script src="bp.js"> </script>
 
 
 </html>
