The game will now speed up. Added website stuff around the game canvas.

--- a/bp.html
+++ b/bp.html
@@ -8,9 +8,32 @@
 </head>
 
 
-<body onkeydown="keyDown(event)"> </body>
-<canvas id="screen"></canvas>
-<script src="bp.js"> </script>
+<body onkeydown="keyDown(event)"> <div id = "container">
+
+    <div>
+      <header>
+        <h1> Ian Char </h1>
+        <h2>Projects</h2>
+
+        <div id="navDiv">
+          <nav>
+            <ul>
+              <li><a class="nav"  href="home.html">Home</a></li> 
+              <li><a class="nav" href="aboutMe.html">About Me</a></li> 
+              <li><a class="nav" href="projects.html">Projects</a></li>
+              <li><a class="nav" href="resume.html">Resume</a></p></li>   
+            </ul>
+          </nav>
+        </div>
+      </header>
+    </div>
+
+	<div id="gameZone"> <canvas id="screen"></canvas> </div>
+	<script src="bp.js"> </script>  
+
+  </div>
+</body>
+
 
 
 </html>
